--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,7 @@
 /db/*.sqlite3-journal
 
 # Ignore image files.
-/public/*
-/public/avatars/*
-/public/no_image/*
-/public/photos/*
+/public
 
 # Ignore all logfiles and tempfiles.
 /log/*
